--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,8 @@
 }
 
 .main-content {
+  background-color: white;
+  color: rgb(21, 21, 21);
   width: 70vw;
   border-left: 1px solid rgb(170, 170, 170);
   border-right: 1px solid rgb(171, 171, 171);
@@ -44,8 +46,8 @@
 }
 
 .modal {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   position: absolute;
 }
 
