--- a/src/index.css
+++ b/src/index.css
@@ -1,26 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto&display=swap');
-@import url('./tw-output.css');
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-
-
-body {
-  background-color: rgb(29, 29, 29);
-  color: white;
-  font-family: 'Playfair Display', serif;
-}
-
-
-a {
-  text-decoration: none;
-  color: white;
-}
-
-li {
-  list-style: none;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
